--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0",
+    "react-model-viewer": "^0.6.1",
+    "styled-components": "^6.1.1",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
